# BOTanica

./: Moisture detector Sketch  Movement arduino  Movement-Sketch.ino  README.md  light-to-movement.py  moisture to movement  pathPlanner.py  robomaster_driver_node.py  sensorInfo.py
jetson/: README.md
jetson/devel/: local_setup.sh  setup.sh
jetson/devel/lib/pkgconfig/: light_planner_pkg.pc  ros_comm_test.pc
jetson/devel/share/light_planner_pkg/cmake/: light_planner_pkgConfig.cmake
jetson/devel/share/ros_comm_test/cmake/: ros_comm_testConfig.cmake
jetson/src/light_follower/: CMakeLists.txt  package.xml
jetson/src/light_follower/scripts/: LP.py  light.py  pathPlanningLight.py
jetson/src/sensor_publisher/: CMakeLists.txt  package.xml
jetson/src/sensor_publisher/launch/: sensor_system.launch
jetson/src/sensor_publisher/msg/: SensorData.msg
jetson/src/sensor_publisher/scripts/: sensorInfo.py
raspi-code/: README.md
raspi-code/devel/share/robomaster_description/cmake/: robomaster_descriptionConfig.cmake
raspi-code/devel/share/robomaster_driver/cmake/: robomaster_driverConfig.cmake
raspi-code/src/robomaster_driver/: .infoRosSensor.py.swp  .pathPlanner.py.swp
raspi-code/src/robomaster_driver/launch/: robomaster_driver.launch
raspi/devel/: setup.sh
raspi/devel/lib/pkgconfig/: catkin_simple.pc  robomaster_description.pc  robomaster_driver.pc
raspi/devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig.cmake
raspi/src/robomaster_driver/: .testPath.py.swo  .testPath.py.swp  CMakeLists.txt
raspi/src/robomaster_driver/src/: driver_OG.py  robomaster_driver_node.py
